--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,5 +1,28 @@
-body{
-  background-color:wheat;
+body {
+  background-color: wheat;
+
+  .container-input{
+    display: flex;
+    flex-direction: column;
+
+    .inputfield {
+      #input{
+        height: 100px;
+        width: 300px;
+      }
+
+    }
+    .inputButtons{
+      margin-top: 30px;
+    }
+
+
+  }
+
+
+
+
+
 }
 
 
