--- a/client/styles.scss
+++ b/client/styles.scss
@@ -20,11 +20,12 @@ body {
 
     #allUsers{
       background-color:rgb(244,249,255);
-      width: 300px;
+      width: 350px;
       font-size: 20px;
       border-radius: 50px;
       text-align: center;
       color: rgb(231,199,187);
+      overflow: auto;
 
     }
   }
@@ -33,33 +34,49 @@ body {
   .container-text{
     display: flex;
     flex-direction: column;
+    margin-left: 400px;
 
     h1{
       color:rgb(228,182,166);
       background-color: rgb(240,244,255);
-
-
+      margin-left: 15px;
+      margin-right: 15px;
     }
 
     .textfield {
       display: flex;
       justify-content: flex-start;
 
+
       .sentItems{
-        margin-right: 160px;
+        margin-right: 100px;
+        margin-left: 10px;
       }
       #input{
-        height: 75px;
-        width: 300px;
+        padding-left: 10px;
+        margin-left: 5px;
+        height: 250px;
+        width: 400px;
         border-radius: 25px;
         background-color: rgb(240,249,255);
         border-color: rgb(231,199,187);
-        margin-left: 50x;
-      }
 
+
+      }
+      .inputButtons{
+        margin-top: 30px;
+        .button{
+          border-radius: 25px;
+          background-color: rgb(244,249,255);
+          border-color: rgb(231,199,187);
+        }
+      }
       #target{
-        height: 150px;
-        width: 300px;
+        padding-left: 10px;
+        height: 300px;
+        width: 500px;
+        word-wrap: break-word;
+        overflow: auto;
         border-radius: 25px;
         background-color: rgb(231,199,187);
         border-style: solid;
@@ -69,15 +86,7 @@ body {
       }
 
     }
-    .inputButtons{
-      margin-top: 30px;
 
-      .button{
-        border-radius: 25px;
-        background-color: rgb(244,249,255);
-        border-color: rgb(231,199,187);
-      }
-    }
 
 
   }
